corrected hero page overflow

--- a/statics/css/style.scss
+++ b/statics/css/style.scss
@@ -1209,7 +1209,7 @@
     }
     .hero-page {
       height: 30em;
-      
+      overflow: hidden;
       span{
    
         font-size: 1em;
